Corrected minor errors and updated title
uploaded main.tex, Capstone.pdf, logo.jpg

--- a/High Concept Document/Rough Outline/main.tex
+++ b/High Concept Document/Rough Outline/main.tex
@@ -23,7 +23,7 @@
         \\
         \textbf{\Large High Concept Document - Revision 0}
         \vspace{0.5cm}
-        \textbf{\Large  \\Gundan APEX}
+        \textbf{\Large  \\Mech-APEX Zero}
         \vspace{1cm}
         \textbf{\\Tian Guo\\Saim Zahid\\Jonathan Yu\\ Yicheng Chen \\Yanting Zhang }
         \vfill
@@ -81,7 +81,8 @@ Player controls different avatars and guides them through a series of quests. Av
         \item Castlevania \\
         Horror themed action adventure game playing as members of the Belmont Family in their quest to slay the Vampire Dracula. Player have at their disposal the main weapon, usually in the form of a whip or sword, and a spell attack at the expense of mana. Player must fight their way through the Dracula’s army of skeletons, ghouls, witches, and demons to reach challenge Dracula. Level design reminiscent of grand gothic style castle with deadly traps and obstacles.
         \item Super Smash Bros \\
-        Horror themed action adventure game playing as members of the Belmont Nintendo’s all star fighting game featuring famous video game character crossovers. The combos and mechanics are intuitive and easy to execute, while maintaining an extreme high skill ceiling. Players can move left, right, and jump to platforms and attack with buttons A and B. Pressing A or B while pressing direction keys, sprinting, and in mid air produces different attacks that can combo the enemy. Players do not die from taking damage directly, but when they are knocked off the stage. The more damage that is taken by a player the further he/she will be knocked away by enemy attacks. The fighting stage usually contains simple platforms.
+        Nintendo’s all star fighting game featuring famous video game character crossovers. The combos and mechanics are intuitive and easy to execute, while maintaining an extreme high skill ceiling. Players can move left, right, and jump to platforms and attack with buttons A and B. Pressing A or B while pressing direction keys, sprinting, and in mid air produces different attacks that can combo the enemy. Players do not die from taking damage directly, but when they are knocked off the stage. The more damage that is taken by a player the further he/she will be knocked away by enemy attacks. The fighting stage usually contains simple platforms. 
+
     \end{itemize}
 
 
@@ -139,8 +140,6 @@ The main camera model will be fixed player-oriented third person view with the U
     \subsubsection*{Sound and Music Style}
     The music will be fast paced rock and roll similar to Dynasty Warrior games to keep players on their toes. The music will also have a techno spin to it to add to the Sci-Fi feel of the game. Other sound in the game include sound of walking/running, hitting, and firing of weapons. For walking, the sound will contain metal clanking and quaking to simulate the step of large machinery. The sound of hitting will include sound of clashing metal for robotic fistfights, and sizzling of laser to simulate use of beam sabers. Firing of automatic ballistic weapons will sound like machine guns. Firing laser weaponry will sound like a zip but much lower and heavier to give impact.
     
-\subsection*{Player Motivation}
-The player will be exposed to a brand new sub-genre which combines the simplistic fun of platformers and the exhilarating entertainment fighting games provide. Both of those will be supplemented with RPG elements, giving the player a sense of freedom to carve their own path through the game. The inclusion of combos also significantly raises the skill ceiling of the game attracting a bigger player base. The game could very well be completed using the basic combos but learning and executing the more complex combos will be an exciting challenge for the player; this in turn, coupled with the many playable characters, also increases the replayability of the game. The game will also feature a rich and diverse storyline giving the player an opportunity to really bond with the characters and the history of the game world. 	
 
 \subsection*{Target Customer}
 Fans of Metroidvania-esque games that also enjoys fighting game elements. Players who like combat systems based off combos (Street Fighter/Tekken, Devil May Cry and Super Smash Bros).
