Update for Design Doc
updated some info for design doc

--- a/Requirement Document/Rev 1/Requirement Document Rev 1.tex
+++ b/Requirement Document/Rev 1/Requirement Document Rev 1.tex
@@ -46,20 +46,21 @@
 	The goals of Team Chicken Sausage is to produce an entertaining game to satisfies the needs of our clients. We want our audience to get the enjoyment of playing a platformer and to be dazzled and surprised by our creative story and universe.
 
 	\section{Stakeholders}
-	\subsection{Development Team} Prepared by team Chicken and Sausages. Team members: Tian Guo, Saim Zahid, Jonathan Yu, Yicheng Chen and Yanting Zhang.
+	\subsection{Development Team} Prepared by team Chicken and Sausages. Team members: Tian Guo, Saim Zahid, Jonathan Yu, Yicheng Chen and Yanting Zhang. The grades of each student for this course is at stake.
 	\subsection{Instructor} Dr. Jacques Carette
-	Professor for the Software Engineering (Game Design) capstone course (SE4GP6).  Dr. Carette approves of the project content and final grades. Any requirements that he provides must be accommodated.
+	Professor for the Software Engineering (Game Design) capstone course (SE4GP6).  Dr. Carette approves of the project content and final grades. Any requirements that he provides must be accommodated. 
 	\subsection{Game Critics}
 	\begin{itemize}
 		\item Dr. Jacques Carette -
 		Professor for the Software Engineering (Game Design) capstone course (SE4GP6).  Dr. Carette approves of the project content and final grades. Any requirements that he provides must be accommodated.
 		\item Daniel Szymczak -
 		Teaching assistant for the Software Engineering (Game Design) capstone course(SE4GP6). Mr. Szymczak grades the project content and provides feedback for improvements. He reports directly to Dr. Carette.
+		\item Judges for the final demo - Other people or parties that will be judging the final demo of the game.
+		
 
 	\end{itemize}
 	\subsection{User Participation}
 	    Player - The players who enjoy platformers and beat em up games.
-	\subsection{Judges}
 
 
 	\section{Mandated Constraints}
@@ -67,7 +68,7 @@
 	\begin{itemize}
 	\subsection{Solution Constraints}
 	\item Any requirements that Dr. Carette describes must be met. Currently, he has mandated that the game engine must be Unity and Unity Assets are free to use with references.
-	\item Any feedbacks and comments from Mr. Szymczak should be adjust and fix in the next revision.
+	\item Any feedback and comments from Mr. Szymczak should be adjust and fix in the next revision.
 
 	\subsection{Implementation Environment of the Current System}
 	\item The final product will be able to run on Windows, Mac OS, and Linux systems, as the Unity library allows to build project for all three platforms.
@@ -97,7 +98,7 @@
 		A type of video game that involves the player jumping from platform to platform to cross the environment.
 		\item RPG \\
 		RPG stands for role playing game is a type of video game in which players assume the roles of characters in a fictional setting.
-		\item Mobile Suit \\ a robotic suit
+		\item Mobile Suit \\ A humanoid mechanical weapon. Usually around 18-20 meters tall. Name created in the show "Mobile Suit Gundam". It is not a robot because a person must sit inside its cockpit to operate/pilot it.
 		\item Respawn \\ The recreation of an entity after its death or destruction
 		\item Check Point \\ The location where respawning takes place
 		\item Product Use Case (PUC) \\ A product use case elaborates on a scenario, showing event name, trigger, preconditions, system requirements, and outcome.
@@ -124,9 +125,11 @@
 
 	\section{The Scope of the Work}
 	\subsection{Existing Inspirations}
-	The biggest inspiration for this project is the Metroid and Castlevania franchises. The cohesive aesthetics and level design are areas that this project will attempt to achieve the same level of competence as the classics of this Genre. The fighting mechanics of Super Smash Bros Franchise will be used to inspire the combat mechanics of this game to introduce new elements of the old platformer formula.
+	The biggest inspiration for this project is the Metroid and Castlevania franchises. The cohesive aesthetics and level design are areas that this project will attempt to achieve the same level of competence as the classics of this Genre. We want to use the level designs of Castlevania as an inspiration for large levels, hidden corridors, and enemies to contest. The Aesthetic will be near future sci-fi, similar to Metal Slug series, where there are heavy machinery, giant mechanized weapons, but not too advanced in the future. \\
+The fighting mechanics of Super Smash Bros Franchise will be used to inspire the combat mechanics of this game to introduce new elements of the old platformer formula.The typical platformer has simplistic combat mechanic such as Super Mario Bros franchise, where jumping on enemies and using items are the only way of dealing direct damage. Castlevania has the "wip attacks" and "spells". Metroid has the arm cannon shots, rockets, and special abilities from the suit. Attacks in this games are simple single button commands. In Super Smash Bros, there are light and heavy attacks paired with directional. Each combination of key presses gives different attack moves. There are also basic attack loops for repeated key presses and charged moves for holding down heavy attacks. We use similar mechanics for our platformer as a way to introduce exciting game play to the player.
 	\subsection{Context of the Work}
-	The player should be motivated by the story, gameplay, and the gameplay rewards. In order to know what happens next, the player must play through the levels. The player can unlock achievements and other Mobile Suits through playing the game.
+	Gameplay and level design is the most important aspects of a platformer. Gameplay and combat will be more important for this particular game because of the combat mechanics that is included. We focus a lot of our efforts on refining the gameplay mechanics of the game. We do not have the time to be producing the assets needed for this game, so we will borrow assets from other games that fits our futuristic aesthetic such as Gundam and Megaman. Bugs and feedbacks will be dealt with as much as we can but our main focus will be on the gameplay and level design.
+
 
 	\section{The Scope of the Product}
 	\subsection{Product Boundary}
