Modified roadmap for requirement doc changes and risk section

--- a/Requirement Document/Rev 1/Requirement Document Rev 1.tex
+++ b/Requirement Document/Rev 1/Requirement Document Rev 1.tex
@@ -1489,8 +1489,14 @@ The fighting mechanics of Super Smash Bros Franchise will be used to inspire the
 	\section{Risks}
 	\begin{itemize}
 		\item The product demands a large portion of time and commitment, once the project has been started, future commitments and opportunity are now lost.
+		\item Failure to satisfy any of the functional requirement would cause the game to break and deliver unsatisfactory experience to the player.
+		\item Learning to use sprite animator in Unity is one of the most important tool to learn for a 2D sprite based game. The quality of sprite animation can significantly affect the quality of a 2D action game.
+		\item The feel of the game play depends heavily on the implementation of sprite animations, movement speed adjustments, and physics. Failure to properly implement these elements would make the game feel clunky to the player.
+		\item Failure to design interesting levels will make the game feel bland and sub-par comparing to any other beat em ups.
+		\item Developer team attend the same meeting physically due to work and class schedules, 
 		\item If the game is a massive hit with the community  there could be potential copyright claims.
-		\item if the project isn’t implement up to standard than our course grade will be affected
+		\item if the project isn’t implement up to standard than our course grade will be affected.
+		\item the amount of bugs within the game can affect the quality of the game. For details refer to "Bug Impact" section of RevisionPlanRev1.pdf.
 	\end{itemize}
 
 	\section{Costs}
