Updated roadmap with design doc information

--- a/RoadMap/RoadMap.tex
+++ b/RoadMap/RoadMap.tex
@@ -13,7 +13,7 @@ This document contains the road map of changes from revision zero to revision on
 This section contains a list of changes from revision zero to revision one for the High Concept Document.
 
 \subsection*{High Concept Change Explination}
-This section contains a list of changes from revision zero to revision one for the High Concept Document
+This section contains a list of changes from revision zero to revision one for the High Concept Document.
 
 \subsection*{Requirments Road Map}
 This section contains a list of changes from revision zero to revision one for the Requirements Document.\\\\
@@ -50,6 +50,7 @@ Regarding requirements 213 and 217, these requirements are added later (hense th
     \end{enumerate}
 
 \subsection*{Requirments Change Explination}
+This section contains a list of changes from revision zero to revision one for the Requirements.
 \begin{itemize}
 		\item Change 1: Addressing feedback for Mandated constraints to only include restrictions imposed on the dev team.
 		\item Change 2: Only interaction is picking up items, implemented as Boolean check of box collision between avater and item.
@@ -60,11 +61,34 @@ Regarding requirements 213 and 217, these requirements are added later (hense th
 		\item Change 8: Addressing feedback. Requirement was missing from Rev 0.
 		\item Change 9: Hardware requirements were too specific and arbitrary so we generalized it. Also moved to correct location
 		\item Change 10: Modified risk section to indicate priority for implementation and testing.
-	\end{itemize}
+\end{itemize}
 
 \subsection*{Design Document Road Map}
-
+This section contains a list of changes from revision zero to revision one for the Design Document.
+ \begin{enumerate}
+        \item Rephrased, fixed spelling, and restructured document
+        \item Added index section
+        \item Added introduction section
+        \item Added boost meter mechanic in movement section as a way to balance the boosting mechanic. Refer to Revision plan for detailed feedback and analysis
+        \item Modified health and items section by reducing RPG elements and introduce simple upgrades and recovery items
+        \item Removal of player gear status screen
+        \item Add camera offset and reworded explaination
+        \item Added combat system damage calculation formula
+        \item Modified item shop and item availability by reducing the selection of items to only upgrades and health pickups (repair kits)
+        \item Added sketch of new level as mock up
+        \item Added background music and sound effect section 
+ \end{enumerate}
 \subsection*{Design Document Change Explination}
-
-
+This section contains a list of changes from revision zero to revision one for the Requirements.
+ \begin{itemize}
+		\item Change 1, 2, and 3: Increase readibility of document and addressing feedback from revision 0.
+		\item Change 4: Boost meter allows player to boost as long as they have positive meter,  as a way to balance the boosting mechanic. Refer to Revision plan for detailed feedback and analysis.
+		\item Change 5: Reduce design elements that are no longer scope of project and requirements and simplify the system to better fit the feel of the game.
+		\item Change 6: Since equipable gears are no longer part of the game, the gear status menu should be removed.
+		\item Change 7: Camera offset when moving helps player to visuall identify the orientation of the in avatar. Rephrased sentences to explain the design better.
+		\item Change 8: Provide more detail of how damage is calculated in the game.
+		\item Change 9: Removed the old gear items that are no longer part of the game.
+		\item Change 10: Provide level mock up that was missing from revision 0 and address feedback. Provide info about level design.
+		\item Change 11: Section was missing from revision 0. Addressing feedback by providing choice of asset used and rationale.
+ \end{itemize}
 \end{document}
